<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_tutorial_pkg</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="robo2020@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <!-- <test_depend>ament_mypy</test_depend> -->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
